# pki

./: .gitignore  CLAUDE.md  Cargo.toml  PKI (Personal Knowledge Internalization)  PKI(Personal Knowledge Internalization).md  README.md  README_zh.md  test.md
pki-cli/: Cargo.toml
pki-cli/src/: downloader.rs  main.rs
pki-engine/: Cargo.toml
pki-engine/src/: lib.rs
pki-ingest/: Cargo.toml
pki-ingest/src/: chunker.rs  lib.rs  parser.rs
pki-trainer/: Cargo.toml  requirements.txt
pki-trainer/python_scripts/: train.py
pki-trainer/src/: env.rs  lib.rs
